(feat): Banner, avatar, bio, about info edit

--- a/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.html
+++ b/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.html
@@ -1,6 +1,6 @@
 <button
   class="m-shadowboxSubmitButton"
-  type="submit"
+  [type]="type"
   [disabled]="disabled"
   [ngClass]="{
     saving: saving,
