--- a/src/app/modules/channels/v2/edit/edit.component.scss
+++ b/src/app/modules/channels/v2/edit/edit.component.scss
@@ -57,4 +57,136 @@ m-channel__edit {
   .m-channelEdit__content {
     flex: 1;
   }
+
+  .m-accordionPane__content > * + * {
+    margin-top: 20px;
+  }
+
+  .m-channelEdit__innerField {
+    margin-top: 15px;
+  }
+
+  .m-channelEdit__imageryPane .m-accordionPane__content {
+    padding-top: 0;
+  }
+
+  .m-channelEdit__imagery {
+    position: relative;
+    height: 148px;
+    margin: 0 -50px;
+    background: none no-repeat center center transparent;
+    background-size: cover;
+
+    @media screen and (max-width: $max-mobile) {
+      margin: 0 -20px;
+    }
+  }
+
+  .m-channelEditImagery__avatar {
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    transform: translate(0, -50%);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background: none no-repeat center center transparent;
+    background-size: cover;
+
+    @media screen and (max-width: $max-mobile) {
+      left: 20px;
+      width: 60px;
+      height: 60px;
+    }
+  }
+
+  .m-channelEditImagery__uploadTrigger {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+
+    @include m-theme() {
+      color: themed($m-textColor--primary);
+      background-color: rgba(themed($m-bgColor--secondary), 0.6);
+    }
+
+    > m-icon {
+      font-size: 17px;
+    }
+
+    > input[type='file'] {
+      position: absolute;
+      top: -1px;
+      left: -1px;
+      width: 1px;
+      height: 1px;
+      opacity: 0.01;
+    }
+  }
+
+  .m-channelEditImagery__uploadBanner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .m-channelEditImagery__uploadAvatar {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+
+    @media screen and (max-width: $max-mobile) {
+      bottom: 35px;
+      left: 35px;
+    }
+  }
+
+  .m-channelEdit__buttonsContainer {
+    margin-bottom: 0 !important;
+  }
+
+  .m-form__row--input {
+    width: 65%;
+
+    &.m-channelEdit__bioInput {
+      width: 100%;
+    }
+
+    @media screen and (max-width: $max-mobile) {
+      width: 100%;
+    }
+
+    input[type='text'],
+    input[type='number'],
+    input[type='password'],
+    input[type='email'],
+    textarea,
+    select {
+      width: 100%;
+    }
+
+    m-date__dropdowns {
+      @media screen and (max-width: $max-mobile) {
+        width: 100%;
+        flex-direction: column;
+
+        .m-dateDropdowns__selectWrapper {
+          max-width: none;
+          width: 100%;
+          margin-bottom: 10px;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+    }
+  }
 }
