youtube migration lists and polish

--- a/src/app/modules/media/youtube-migration/config/config.component.html
+++ b/src/app/modules/media/youtube-migration/config/config.component.html
@@ -1,4 +1,4 @@
-<!-- <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
+<form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
     <div class="m-form__field--checkbox stretchedField">
       <div class="m-form__row--label">
@@ -8,17 +8,17 @@
         <div class="m-form__field--checkbox">
           <div class="m-form__row--input">
             <label
-              for="autoTransfer"
+              for="autoImport"
               class="m-form__customInputWrapper__checkbox"
               i18n
               >Automatically transfer newly added YouTube videos across to Minds
               <input
                 type="checkbox"
-                id="autoTransfer"
-                name="autoTransfer"
-                formControlName="autoTransfer"
+                id="autoImport"
+                name="autoImport"
+                formControlName="autoImport"
                 class="form-control"
-                data-minds="autoTransfer"
+                data-minds="autoImport"
                 [readonly]="inProgress || !init"
               />
               <span class="m-form__customInput__checkbox"></span>
@@ -28,4 +28,15 @@
       </div>
     </div>
   </div>
-</form> -->
+</form>
+<div class="m-settingsV2__headerLabel m-youtubeMigration__headerLabel">
+  Disconnect YouTube Account
+</div>
+<div class="m-settingsV2__desc m-youtubeMigration__desc">
+  <p>Status: <span>Connected</span></p>
+  <p>
+    You can simply disconnect your YouTube account from Minds. In doing so, any
+    previously transferred videos will continue to be available on Minds.
+  </p>
+  <p><a (click)="disconnectAccount()">Disconnect YouTube account</a></p>
+</div>
