--- a/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
+++ b/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
@@ -1,1 +1,17 @@
-<p>transfer-status works!</p>
+<div class="m-youtubeMigration__transferStatusWrapper">
+  <div class="m-youtubeMigration__transferStats">
+    <div>
+      <span>{{ dailyLimit }}</span
+      >/day limit ·
+    </div>
+    <div>
+      <div>
+        <span>{{ queuedCount }}</span> queued ·
+      </div>
+      <div>
+        <span>{{ transferringCount }}</span> transferring
+      </div>
+    </div>
+  </div>
+  <a (click)="transferAllVideos()">Transfer all videos</a>
+</div>
