--- a/src/app/modules/media/youtube-migration/youtube-migration.component.html
+++ b/src/app/modules/media/youtube-migration/youtube-migration.component.html
@@ -1,11 +1,27 @@
-<!-- <router-outlet></router-outlet> -->
-<m-youtubeMigration__connect></m-youtubeMigration__connect>
-<div style="border-top:1px solid grey; padding: 16px 0;"></div>
-<m-youtubeMigration__dashboard></m-youtubeMigration__dashboard>
-<div style="border-top:1px solid grey;padding: 16px 0;"></div>
-<m-youtubeMigration__config></m-youtubeMigration__config>
-<div style="border-top:1px solid grey;padding: 16px 0;"></div>
-<m-youtubeMigration__unmigratedVideos></m-youtubeMigration__unmigratedVideos>
-<div style="border-top:1px solid grey;padding: 16px 0;"></div>
-<m-youtubeMigration__migratedVideos></m-youtubeMigration__migratedVideos>
-<div style="border-top:1px solid grey;padding: 16px 0;"></div>
+<div *ngIf="!init" class="m-settingsV2__spinner">
+  <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+</div>
+<ng-container *ngIf="init">
+  <div class="m-settingsV2__headerWrapper">
+    <div class="m-settingsV2__backButton">
+      <a (click)="goBack()">
+        <i class="material-icons">arrow_back</i><span>Back</span>
+      </a>
+    </div>
+    <div class="m-settingsV2__headerLabel" *ngIf="!this.isConnected">
+      YouTube Migration
+    </div>
+    <div
+      class="m-settingsV2__headerLabel m-youtubeMigration__headerLabel"
+      *ngIf="this.isConnected"
+    >
+      <i class="ion-icon ion-social-youtube"></i><span>{{ channelTitle }}</span>
+    </div>
+  </div>
+  <div class="m-settingsV2__desc" *ngIf="!this.isConnected">
+    Transferring your video content from YouTube to Minds doesn’t need to be an
+    ordeal. Using our transfer tool, you can quickly and easily migrate your
+    content to Minds, and increase your audience even more.
+  </div>
+  <router-outlet></router-outlet>
+</ng-container>
