--- a/src/app/modules/composer/components/popup/schedule/schedule.component.scss
+++ b/src/app/modules/composer/components/popup/schedule/schedule.component.scss
@@ -57,6 +57,7 @@
       font-weight: 500;
       font-size: 16px;
       line-height: 19px;
+      border: none;
 
       @include m-theme() {
         color: rgba(themed($m-textColor--secondary), 0.5);
@@ -161,5 +162,15 @@
         width: 167px;
       }
     }
+  }
+}
+
+.m-calendar__grid {
+  td {
+    border: none !important;
+  }
+
+  table {
+    display: initial;
   }
 }
