--- a/src/app/common/components/accordion/accordion-pane.component.html
+++ b/src/app/common/components/accordion/accordion-pane.component.html
@@ -1,5 +1,5 @@
 <div class="m-accordionPane__title" (click)="toggleEmitter.emit()">
-  {{ title }}
+  {{ headerTitle }}
 </div>
 
 <div class="m-accordionPane__content" [hidden]="!opened">
