--- a/src/app/modules/composer/components/text-area/text-area.component.scss
+++ b/src/app/modules/composer/components/text-area/text-area.component.scss
@@ -117,6 +117,11 @@ m-composer__textArea {
 }
 .m-composer__textArea--blog {
   overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding-right: 17px;
+  box-sizing: content-box;
 
   .m-composerTextarea__title.m-composerTextarea__title--blog {
     font-size: 16px;
