--- a/src/app/modules/composer/components/preview/rich-embed-preview.component.html
+++ b/src/app/modules/composer/components/preview/rich-embed-preview.component.html
@@ -10,4 +10,6 @@
   <div *ngIf="richEmbed?.url" class="m-composerRichEmbedPreview__domain">
     {{ extractDomain() }}
   </div>
+
+  <ng-content></ng-content>
 </div>
