--- a/src/app/modules/channels/v2/edit/edit.component.html
+++ b/src/app/modules/channels/v2/edit/edit.component.html
@@ -148,7 +148,44 @@
         <ng-container *ngTemplateOutlet="saveButton"></ng-container>
       </m-accordion__pane>
 
-      <m-accordion__pane *ngIf="false" headerTitle="Hashtags" i18n-headerTitle>
+      <m-accordion__pane headerTitle="Hashtags" i18n-headerTitle>
+        <div class="m-form__fieldsContainer">
+          <div class="m-form__row--input m-channelEdit__hashtagInput">
+            <m-hashtags__typeaheadInput
+              placeholder="Enter tag"
+              historyKey="channel-edit"
+              [disabled]="(service.hashtags$ | async)?.length >= 5"
+              [maxEntries]="5"
+              (onAction)="addHashtagIntent($event)"
+              #hashtagsTypeaheadInput
+            ></m-hashtags__typeaheadInput>
+
+            <button
+              class="m-fieldButton-v2"
+              [disabled]="(service.hashtags$ | async)?.length >= 5"
+              (click)="hashtagsTypeaheadInput.triggerAction()"
+              i18n
+            >
+              Add
+            </button>
+          </div>
+        </div>
+
+        <ul class="m-channelEdit__hashtagList">
+          <li
+            *ngFor="let tag of service.hashtags$ | async"
+            class="m-channelEditHashtagList__item"
+          >
+            <span>#{{ tag }}</span>
+            <m-icon
+              class="m-channelEditHashtagListItem__remove"
+              iconId="close"
+              [sizeFactor]="-20"
+              (click)="service.removeHashtag(tag)"
+            ></m-icon>
+          </li>
+        </ul>
+
         <ng-container *ngTemplateOutlet="saveButton"></ng-container>
       </m-accordion__pane>
 
