refactor video lists into single component

--- a/src/app/modules/media/youtube-migration/dashboard/dashboard.component.scss
+++ b/src/app/modules/media/youtube-migration/dashboard/dashboard.component.scss
@@ -1,8 +1,8 @@
 m-youtubeMigration__dashboard {
   .m-tabs__container {
-    margin: 8px 0;
+    margin: 10px 0 !important;
     .m-tabs__tab > a {
-      padding: 13px 0 !important;
+      padding: 10px 0 !important;
     }
   }
 }
