--- a/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
+++ b/src/app/modules/media/youtube-migration/transfer-status/transfer-status.component.html
@@ -1,4 +1,7 @@
-<div class="m-youtubeMigration__transferStatusWrapper">
+<div *ngIf="!init" class="m-settingsV2__spinner">
+  <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
+</div>
+<div class="m-youtubeMigration__transferStatusWrapper" *ngIf="init">
   <div class="m-youtubeMigration__transferStats">
     <div>
       <span>{{ dailyLimit }}</span
